--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ $.extend(spring.config, {
   // my blog title
   title: 'Spring',
   // my blog description
-  desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/zhaoda/spring)",
+  desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/Caiyundo/wong)",
   // my github username
   owner: 'zhaoda',
   // creator's username
