--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ $.extend(spring.config, {
   // my blog description
   desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/Caiyundo/wong)",
   // my github username
-  owner: 'zhaoda',
+  owner: 'wong',
   // creator's username
-  creator: 'zhaoda',
+  creator: 'wong',
   // the repository name on github for writting issues
-  repo: 'spring',
+  repo: 'wong',
   // custom page
   pages: [
     {name: 'About Spring', number: 1},
