--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ $.extend(spring.config, {
   // my blog description
   desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/Caiyundo/wong)",
   // my github username
-  owner: 'wong',
+  owner: 'caiyundo',
   // creator's username
-  creator: 'wong',
+  creator: 'caiyundo',
   // the repository name on github for writting issues
   repo: 'wong',
   // custom page
