--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ $.extend(spring.config, {
   // my blog description
   desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/Caiyundo/wong)",
   // my github username
-  owner: 'caiyundo',
+  owner: 'Caiyundo',
   // creator's username
-  creator: 'caiyundo',
+  creator: 'Caiyundo',
   // the repository name on github for writting issues
   repo: 'wong',
   // custom page
@@ -53,7 +53,7 @@ var _hmt = _hmt || [];
 <body>
 <!--[if lt IE 9]>
 <script>
-location.href = 'https://github.com/' + spring.config.owner + '/' + spring.config.repo + '/issues?page=1&state=open'
+location.href = 'https://github.com/' + wong.config.owner + '/' + wong.config.repo + '/issues?page=1&state=open'
 </script>
 <![endif]-->
 </body>
