--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ var _hmt = _hmt || [];
 <body>
 <!--[if lt IE 9]>
 <script>
-location.href = 'https://github.com/' + wong.config.owner + '/' + wong.config.repo + '/issues?page=1&state=open'
+location.href = 'https://github.com/' + spring.config.owner + '/' + spring.config.repo + '/issues?page=1&state=open'
 </script>
 <![endif]-->
 </body>
